[gd_scene load_steps=20 format=3 uid="uid://cp4p7xd5v3pb0"]

[ext_resource type="Script" path="res://assets/scripts/coding_area/compiler_engine.gd" id="1_r2x8g"]
[ext_resource type="Script" path="res://assets/scripts/coding_area/coding_area_interface.gd" id="1_yjsnd"]
[ext_resource type="Texture2D" uid="uid://dbcjrtxq16vi7" path="res://assets/dev/vblox_logo/logo_flat_gray.png" id="2_bc8j3"]
[ext_resource type="Texture2D" uid="uid://ilx2o6n32nk5" path="res://assets/textures/coding_area_textures/editor/span_blocks.png" id="4_0nnom"]
[ext_resource type="FontFile" uid="uid://drcp5q6p2eycg" path="res://assets/font/lexend/Lexend-Light.ttf" id="4_cnuqi"]
[ext_resource type="Texture2D" uid="uid://cmji2bkg8pn82" path="res://assets/textures/coding_blocks_textures/variables/set.png" id="5_5tr0d"]
[ext_resource type="Script" path="res://assets/scripts/coding_area/coding_interactor.gd" id="5_8vt2h"]
[ext_resource type="Texture2D" uid="uid://c3e3tbyneylgy" path="res://assets/textures/coding_area_textures/editor/background_dark.png" id="5_w5t3d"]
[ext_resource type="Texture2D" uid="uid://cajtmn7i27pl" path="res://assets/textures/coding_blocks_textures/events/when_play_pressed.png" id="5_xiafe"]
[ext_resource type="Texture2D" uid="uid://bhq6jrcbqxs2y" path="res://assets/textures/coding_blocks_textures/variables/change.png" id="6_3or3i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_63k0g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x3tmo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_htrr3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_culku"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x3se1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k6vb6"]
bg_color = Color(0.0509804, 0.0509804, 0.0509804, 0.392157)
corner_radius_top_right = 30
corner_radius_bottom_right = 30

[sub_resource type="AtlasTexture" id="AtlasTexture_760fb"]
atlas = ExtResource("4_0nnom")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_52rwt"]
atlas = ExtResource("4_0nnom")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr22b"]
atlas = ExtResource("4_0nnom")
region = Rect2(0, 64, 32, 32)

[node name="coding_area" type="Node2D"]
script = ExtResource("1_r2x8g")

[node name="user_interface_layer" type="CanvasLayer" parent="."]

[node name="user_interface" type="Control" parent="user_interface_layer"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_yjsnd")

[node name="pause_menu" type="Control" parent="user_interface_layer/user_interface"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false

[node name="background" type="ColorRect" parent="user_interface_layer/user_interface/pause_menu"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0705882, 0.0705882, 0.0705882, 0)

[node name="menu_button" type="Button" parent="user_interface_layer/user_interface/pause_menu"]
z_index = 2
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -304.0
offset_top = -184.0
offset_right = -62.0
offset_bottom = -146.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.12549, 0.705882, 0.796078, 1)
theme_override_colors/font_pressed_color = Color(0.0784314, 0.517647, 0.588235, 1)
theme_override_colors/font_hover_color = Color(0.192157, 0.807843, 0.909804, 1)
theme_override_colors/font_focus_color = Color(0.12549, 0.705882, 0.796078, 1)
theme_override_colors/font_disabled_color = Color(0.0784314, 0.517647, 0.588235, 1)
theme_override_fonts/font = ExtResource("4_cnuqi")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_63k0g")
theme_override_styles/hover = SubResource("StyleBoxEmpty_x3tmo")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_htrr3")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_culku")
theme_override_styles/focus = SubResource("StyleBoxEmpty_x3se1")
text = "Back To Menu"
flat = true
alignment = 2

[node name="blocks_menu" type="Control" parent="user_interface_layer/user_interface"]
process_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="blocks_panel" type="Panel" parent="user_interface_layer/user_interface/blocks_menu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.2
anchor_bottom = 1.0
offset_right = -136.0
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_k6vb6")

[node name="blocks_container" type="ScrollContainer" parent="user_interface_layer/user_interface/blocks_menu/blocks_panel"]
layout_direction = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.129
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.00799751
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="blocks_separator" type="VBoxContainer" parent="user_interface_layer/user_interface/blocks_menu/blocks_panel/blocks_container"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1

[node name="events_separator" type="Label" parent="user_interface_layer/user_interface/blocks_menu/blocks_panel/blocks_container/blocks_separator"]
layout_mode = 2
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
theme_override_fonts/font = ExtResource("4_cnuqi")
theme_override_font_sizes/font_size = 25
text = "Events"
horizontal_alignment = 2

[node name="when_play_pressed" type="TextureButton" parent="user_interface_layer/user_interface/blocks_menu/blocks_panel/blocks_container/blocks_separator"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_xiafe")
stretch_mode = 5

[node name="variables_separator" type="Label" parent="user_interface_layer/user_interface/blocks_menu/blocks_panel/blocks_container/blocks_separator"]
layout_mode = 2
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
theme_override_fonts/font = ExtResource("4_cnuqi")
theme_override_font_sizes/font_size = 25
text = "

Variables"
horizontal_alignment = 2

[node name="set_variable" type="TextureButton" parent="user_interface_layer/user_interface/blocks_menu/blocks_panel/blocks_container/blocks_separator"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_5tr0d")
stretch_mode = 5

[node name="change_variable" type="TextureButton" parent="user_interface_layer/user_interface/blocks_menu/blocks_panel/blocks_container/blocks_separator"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_3or3i")
stretch_mode = 5

[node name="conditionals_separator" type="Label" parent="user_interface_layer/user_interface/blocks_menu/blocks_panel/blocks_container/blocks_separator"]
layout_mode = 2
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
theme_override_fonts/font = ExtResource("4_cnuqi")
theme_override_font_sizes/font_size = 25
text = "

Conditionals"
horizontal_alignment = 2

[node name="loops_separator" type="Label" parent="user_interface_layer/user_interface/blocks_menu/blocks_panel/blocks_container/blocks_separator"]
layout_mode = 2
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
theme_override_fonts/font = ExtResource("4_cnuqi")
theme_override_font_sizes/font_size = 25
text = "

Loops"
horizontal_alignment = 2

[node name="arithmetic_separator" type="Label" parent="user_interface_layer/user_interface/blocks_menu/blocks_panel/blocks_container/blocks_separator"]
layout_mode = 2
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
theme_override_fonts/font = ExtResource("4_cnuqi")
theme_override_font_sizes/font_size = 25
text = "

Arithmetic"
horizontal_alignment = 2

[node name="comparison_separator" type="Label" parent="user_interface_layer/user_interface/blocks_menu/blocks_panel/blocks_container/blocks_separator"]
layout_mode = 2
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
theme_override_fonts/font = ExtResource("4_cnuqi")
theme_override_font_sizes/font_size = 25
text = "

Comparison"
horizontal_alignment = 2

[node name="logical_separator" type="Label" parent="user_interface_layer/user_interface/blocks_menu/blocks_panel/blocks_container/blocks_separator"]
layout_mode = 2
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
theme_override_fonts/font = ExtResource("4_cnuqi")
theme_override_font_sizes/font_size = 25
text = "

Logical"
horizontal_alignment = 2

[node name="visual_separator" type="Label" parent="user_interface_layer/user_interface/blocks_menu/blocks_panel/blocks_container/blocks_separator"]
layout_mode = 2
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
theme_override_fonts/font = ExtResource("4_cnuqi")
theme_override_font_sizes/font_size = 25
text = "

Visual"
horizontal_alignment = 2

[node name="span_blocks_panel" type="TextureButton" parent="user_interface_layer/user_interface/blocks_menu/blocks_panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.854
anchor_top = 0.474
anchor_right = 1.0
anchor_bottom = 0.526
offset_left = 0.0639954
offset_top = 0.0799561
offset_bottom = -0.0800171
grow_horizontal = 0
grow_vertical = 2
mouse_default_cursor_shape = 10
toggle_mode = true
texture_normal = SubResource("AtlasTexture_760fb")
texture_pressed = SubResource("AtlasTexture_52rwt")
texture_hover = SubResource("AtlasTexture_sr22b")
stretch_mode = 5

[node name="background" type="Sprite2D" parent="."]
z_index = -1
texture_repeat = 2
scale = Vector2(5, 5)
texture = ExtResource("5_w5t3d")
region_enabled = true
region_rect = Rect2(0, 0, 2160, 1440)
metadata/_edit_lock_ = true

[node name="logo" type="Sprite2D" parent="background"]
position = Vector2(0, 8)
scale = Vector2(0.0625, 0.0625)
texture = ExtResource("2_bc8j3")

[node name="coding_interactor" type="Camera2D" parent="."]
position = Vector2(0, 40)
zoom = Vector2(2.5, 2.5)
limit_left = -4320
limit_top = -2880
limit_right = 4320
limit_bottom = 2880
limit_smoothed = true
position_smoothing_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("5_8vt2h")

[node name="coding_block_objects" type="Node2D" parent="."]

[connection signal="pressed" from="user_interface_layer/user_interface/pause_menu/menu_button" to="user_interface_layer/user_interface" method="_on_menu_button_pressed"]
[connection signal="mouse_entered" from="user_interface_layer/user_interface/blocks_menu/blocks_panel" to="user_interface_layer/user_interface" method="_on_blocks_panel_mouse_entered"]
[connection signal="mouse_exited" from="user_interface_layer/user_interface/blocks_menu/blocks_panel" to="user_interface_layer/user_interface" method="_on_blocks_panel_mouse_exited"]
[connection signal="pressed" from="user_interface_layer/user_interface/blocks_menu/blocks_panel/blocks_container/blocks_separator/when_play_pressed" to="user_interface_layer/user_interface" method="_on_when_play_pressed_pressed"]
[connection signal="pressed" from="user_interface_layer/user_interface/blocks_menu/blocks_panel/blocks_container/blocks_separator/set_variable" to="user_interface_layer/user_interface" method="_on_set_variable_pressed"]
[connection signal="pressed" from="user_interface_layer/user_interface/blocks_menu/blocks_panel/blocks_container/blocks_separator/change_variable" to="user_interface_layer/user_interface" method="_on_change_variable_pressed"]
[connection signal="toggled" from="user_interface_layer/user_interface/blocks_menu/blocks_panel/span_blocks_panel" to="user_interface_layer/user_interface" method="_on_span_blocks_panel_toggled"]
